# softmatch

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py  softmatch.py
docs/: cli-reference.md  formats.md  index.md  installation.md  tutorial.md
examples/: queries.csv  sample.fastq
softmatch/: __init__.py  cli.py  clustering.py  processing.py  visualization.py
tests/: test_ambiguous.py  test_matcher.py  test_visualization.py
